@@ -4,6 +4,7 @@
 
 	- Fix a typo.
 	- Pass arguments in correct order to ProtocolInfo comparison functions.
+	- Implement comparison of extra field of ProtocolInfo.
 
 2008-02-11  Zeeshan Ali Khattak  <zeenix@gmail.com>
 
